squashing bugs
git-svn-id: svn://svn.open-ils.org/ILS/trunk@741 dcc99617-32d9-48b4-a31d-7c20da2025e4

--- a/Evergreen/css/opac/nav_bar.css
+++ b/Evergreen/css/opac/nav_bar.css
@@ -58,7 +58,7 @@
 #now_searching_cell{
 	text-align:left;
 	padding-left: 5px;
-	font-size: .75em;  
+/*	font-size: .75em;  */
 }
 
 .front_now_searching {
